Implement funding API for testnet
