# keyconnect-api/src/main/resources/api.yaml
@@ -199,6 +199,51 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/BlockchainAccountInfo'
+  /v1/blockchains/{chainId}/accounts/{accountId}/fund:
+    post:
+      summary: Funds the given account if funding is available for the specified network.
+      description: Uses the blockchain funding APIs to fund a given account.
+      operationId: fundAccount
+      tags:
+        - blockchains
+        - accounts
+        - funding
+      parameters:
+        - name: chainId
+          in: path
+          description: ID of the block chain
+          required: true
+          schema:
+            type: string
+            enum:
+              - xrp
+              - eth
+              - btc
+            example: xrp
+        - name: network
+          in: query
+          description: "
+              Blockchain network to get the account info from. For example, for XRP this
+              would be one of (testnet/devnet/mainnet). More information regarding what
+              environments are available can be obtained from /v1/blockchains/{chainId}/status
+              endpoint.
+            "
+          required: false
+          schema:
+            type: string
+            example: testnet
+            default: "mainnet"
+        - name: accountId
+          in: path
+          description: Identifier representing the account. This is most likely the wallet address.
+          required: true
+          schema:
+            type: string
+            example: "rDsbeomae4FXwgQTJp9Rs64Qg9vDiTCdBv"
+      responses:
+        '202':
+          description: Funding request was accepted, it will be fulfilled momentarily.
+
   /v1/blockchains/{chainId}/accounts/{accountId}/transactions:
     get:
       summary: Returns paginated list of transactions.
