# keyconnect-server/src/main/java/app/keyconnect/server/gateways/BlockchainGateway.java
@@ -25,7 +25,7 @@ public interface BlockchainGateway {
 
   BlockchainAccountInfo getAccount(String network, String accountId) throws UnknownNetworkException;
 
-  BlockchainAccountInfo fundAccount(String network, String accountId) throws UnknownNetworkException;
+  void fundAccount(String network, String accountId);
 
   BlockchainAccountTransactions getTransactions(String accountId, String network, int limit,
       String cursor)
